--- a/source/styles/blocks/_page-navigation.scss
+++ b/source/styles/blocks/_page-navigation.scss
@@ -60,6 +60,7 @@
 @media (min-width: #{variables.$tablet-width}) {
   .page-navigation__list {
     display: flex;
+    flex-wrap: wrap;
 
     border: 0;
     background-color: transparent;
@@ -85,6 +86,6 @@
 
 @media (min-width: #{variables.$desktop-width}) {
   .page-navigation__list {
-    gap: 20px;
+    column-gap: 20px;
   }
 }
